Fix buttons so text will not overflow

--- a/src/Components/Trivia/Trivia.css
+++ b/src/Components/Trivia/Trivia.css
@@ -33,7 +33,9 @@
 }
 
 .mc-button {
-    height: 4vw;
+    /* height: 4vw; */
+    height: auto;
+    min-height: 8vh;
     width: 17vw;
     font-family: 'Coiny';
     font-size: 2vh;
